--- a/tarea_3_marcadoresx2/tarea3.css
+++ b/tarea_3_marcadoresx2/tarea3.css
@@ -1,6 +1,6 @@
-.buttons {
+.buttons, .coords {
     position: absolute;
-    top: 10%;
+    top: 20%;
     left: 0;
     width: 100%;
     height: 5em;
@@ -10,12 +10,15 @@
     z-index: 10;
   }
 
-  .say-hi-button {
-    padding: 0.25em;
-    border-radius: 4px;
-    border: none;
-    background: white;
-    color: black;
-    width: 4em;
-    height: 2em;
+  .coords {
+    display: flex;
+    flex-direction: column;
+    top: 10%;
+  }
+  .marker {
+    background-color: gray;
+    width:100%;
+  }
+  .marker input {
+    width:90%;
   }
