--- a/tarea_3_marcadoresx2/tarea3.css
+++ b/tarea_3_marcadoresx2/tarea3.css
@@ -1,6 +1,6 @@
 .buttons, .coords {
     position: absolute;
-    top: 20%;
+    top: 10%;
     left: 0;
     width: 100%;
     height: 5em;
@@ -13,7 +13,7 @@
   .coords {
     display: flex;
     flex-direction: column;
-    top: 10%;
+    top: 0;
   }
   .marker {
     background-color: gray;
